@@ -1,5 +1,11 @@
 2001-06-11  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>
 
+	* MNI/Batch.pm (JobStatus): Set verbose and execute options for
+	the spawner.  Cache "baq" output for 60 seconds to avoid invoking
+	this command too often (it is slow).
+
+2001-06-11  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>
+
 	* MNI/Batch.pm (_emit_syncfile_shellcode): Use "touch" and "mv"
 	to create syncfile; avoids problems if "touch" wants to examine
 	the file after creating it (SGI does this).  Thanks to Chris
